@@ -16,13 +16,12 @@ public class JdbcRegistryImpl implements JdbcRegistry {
 
 	@Override
 	public void addJdbcDriver(String className, URL location) throws JdbcRegistryException {
-		try {
-			URLClassLoader classLoader = new URLClassLoader(new URL[] { location }, ClassLoader.getSystemClassLoader());
-			Class<?> driverClass = classLoader.loadClass(className);
-			Driver driver = (Driver) driverClass.newInstance();
+		try (URLClassLoader classLoader = new URLClassLoader(new URL[] { location }, ClassLoader.getSystemClassLoader())) {
+			Class<? extends Driver> driverClass = classLoader.loadClass(className).asSubclass(Driver.class);
+			Driver driver = driverClass.getConstructor().newInstance();
 			drivers.add(driver);
 		}
-		catch (InstantiationException | ClassNotFoundException | IllegalAccessException ie) {
+		catch (Exception ie) {
 			throw new JdbcRegistryException(ie);
 		}
     }
